[package]
name = "seagull"
version = "0.1.0"
authors = ["adoyee <adoyee@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "seagull"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.0.1"
hyperscan = "0.2.0"
thiserror = "1.0.24"
clap = "3.0.0-beta.2"
